@@ -1,5 +1,6 @@
 Changes
 examples/ex1.pl
+images/ex1.png
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
