@@ -1,5 +1,6 @@
 0.04
  - Add Task::PYX to SEE ALSO section in doc.
+ - Add output image to example.
  - Improve SEE ALSO section in doc.
  - Move author tests to xt/ directory.
  - Move pyx2graphviz to App::PYX::GraphViz distribution.
